--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    working_dir: usr/src/app
+    working_dir: /usr/src/app
     volumes:
-    - ./c++/:usr/src/app/
+    - ./c++/:/usr/src/app/
